Initial GitHub pages site with Jekyll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         {% assign tag_slug = tag | slugify: "raw" %}
         <div class="tag-link">
           <a
-            href={{ site.baseurl | append: "/tags/" | append: tag_slug | append: "/" }}
+            href={{ site.baseurl | append: "/tags/" | append: tag_slug }}
             rel="category tag">
             #{{ tag }}
           </a>
