--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,13 +17,9 @@
 		padding: 2%;
 	}
 
-	.sitetitle:hover{
-		filter: brightness(300%);
-	}
-
 	h1
 	{
-		font-size: 4vh;
+		font-size: 2vw;
 	}
 
 	@font-face {
@@ -33,7 +29,8 @@
 
 /*NAVIGATION*/ 
 	.current {
-	  background-color: black;
+	  background-color: #fafafa;
+	  color: black;
 	}
 
 	a.menu-link {
@@ -55,7 +52,6 @@
 
 	.menu-bar {
 		color: #ffffff;
-		
 		text-align: center;
 		font-size: 2vw;
 		font-family: Trebuchet, sans-serif;
@@ -75,7 +71,7 @@
 
 /*GENERAL CONTENT*/
 	.sitecontent {
-		padding-top: 5%;
+		padding-top: 5%;	
 		padding-left: 10%;
 		padding-right: 10%;
 		padding-bottom: 7%;
@@ -201,23 +197,22 @@
 		.hovertext:before {
 		  content: attr(data-hover);
 		  visibility: hidden;
-		  opacity: 0;
+		  opacity: 1;
 		  width: 140px;
 		  background-color: #313A46;
 		  color: #ffffff;
-		  text-align: center;
 		  border-radius: 5px;
 		  padding: 5px 0;
 		  transition: opacity .1s ease-in-out;
-		  font-size: medium;
+		  
 
-		  position: absolute;
-		  z-index: 1;
+		  position: relative;
+		  z-index: 0;
 		  left: 0;
 		  top: 110%;
 		}
 
-		.hovertext:hover:before {
+		.hovertext:before {
 		  opacity: 1;
 		  visibility: visible;
 		}
@@ -255,12 +250,14 @@
 	/*LANGUAGE*/
 		.chinese {
 			font-size: 1.7vw;
+			padding-right: 1%;
+			padding-left: 1%;
 			
 		}
 		.portuguese {
 			font-size: 1.43vw;
-			padding-left: 15px;
-			padding-right: 3%;
+			padding-right: 1%;
+			padding-left: 1%;
 			
 		}
 
@@ -316,14 +313,15 @@
 		text-align: center;
 	}
 
+	.other-authors-index-container:hover .other-authors-index-centered{
+		opacity: 1;
+	  	cursor:pointer;
+	  	color:#ff77ff;
+	}
+
 	img.author-intro-img {
-		position: relative;
-	  	top: 50%;
-	  	left: -25%;
-		min-width: 100%;
-		max-height: 100%;
-	  	object-fit: cover;
-		filter:brightness(300%);
+		width: 20vw;
+		filter:brightness(110%);
 		opacity: 0.5;
 	}
 
@@ -334,18 +332,87 @@
 		object-fit: scale-down;
 	}
 
+	.author-intro-grid{
+		display: grid;
+			grid-template-columns: 1fr 1fr;
+	}
+
+	.author-intro-container{
+			position:relative;
+			text-align: center;
+			padding-left: 5%;
+			padding-right: 5%;
+			padding-top: 0%;
+			padding-bottom: 10%;
+
+	}
+
 	.author-intro{
 		position: absolute;
 	  	top: 50%;
 	  	left: 0%;
 		font-size: 1.2vw;
 	  	color:black;
-	  	
 	}
 
 	.author-intro-txt{
 		padding-left: 5%;
 		padding-right: 5%;
+	}
+
+	.other-authors-index-container{
+		position:relative;
+		
+		padding-left: 0%;
+		padding-right: 5%;
+		padding-top: 10%;
+		padding-bottom: 10%;
+		}
+
+	.other-authors-index-centered{
+		position: absolute;
+	  	top: 50%;
+	  	left: 50%;
+	  	transform: translate(-50%, -50%);
+	  	opacity: 0;
+	  	transition: .5s ease;
+	  	object-fit: contain;
+	  	max-height: 100%;
+	  	max-width: 100%;
+	  	overflow: hidden;
+	  	text-overflow: clip;
+	}
+
+	.other-authors-index-centered-pt{
+		position: absolute;
+	  	top: 50%;
+	  	left: 0%;
+	  	transform: translate(-50%, -50%);
+	  	opacity: 0;
+	  	transition: .5s ease;
+	  	object-fit: contain;
+	  	max-height: 100%;
+	  	max-width: 100%;
+	  	overflow: hidden;
+	  	text-overflow: clip;
+	}
+
+	.other-author-name{
+		opacity: 1;
+		font-size: 3vw;
+		font-size-adjust: auto;
+	}
+
+	.other-author-name-pt{
+		opacity: 1;
+		font-size: 2vw;
+		font-size-adjust: auto;
+		color: black;
+	}
+
+	.other-authors-index-grid	{
+		display: grid;
+		  grid-template-columns: 1fr 1fr 1fr 1fr;
 	}
 
 /*SITE FOOTER*/
@@ -369,10 +436,18 @@
 
 @media only screen and (max-width: 700px){
 
+/* GENERAL MOBILE */
 	img.sitetitle{
 		width: 50%;
 		padding-bottom: 1%;
 	}
+
+	h1
+	{
+		font-size: 4vw;
+	}
+
+/* NAVIGATION MOBILE */
 
 	.menu-bar {
 	color: #ffffff;
