Initial GitHub pages site with Jekyll

--- a/_layouts/layout-author.html
+++ b/_layouts/layout-author.html
@@ -8,27 +8,27 @@ layout: default
 		<img class="author-intro-img" src="{{site.baseurl}}/authors/{{page.name}}.jpg">
 	</div>
 	
-	<div >
+	<div>
 		<div>
-			<h1>{{page.name}}<br>
-			{{page.chinese_name}}<br>
-    		</h1>
+		<div class="author-intro-grid">
+			<h1>{{page.name}}</h1>
+			<h1>{{page.chinese_name}}</h1>
+    	</div>
     	</div>
 
     	<div class="author-intro-grid">
 		{{ content }}
-		</div>
-		
-		<div>
-				<h1> textos de <big>{{page.name}}</big> </h1>
-				<h1> <big>{{page.chinese_name}}</big> 的文本 </h1>
+			<div class="lista-textos-box">
+				<h1 class="lista-textos-title"> textos de <small>{{page.name}}</small> <br>
+				<small>{{page.chinese_name}}</small> 的文本 </h1>
 				<ul>
 				{% assign filtered_textos = site.textos | where: 'author', page.name %}
 				{% for item in filtered_textos %}
-    				<il><a href="{{site.baseurl}}{{ item.url }}">{{ item.title }} | {{item.title_pt}}</a></il>
+    				<il><a class="lista-textos" href="{{site.baseurl}}{{ item.url }}">{{ item.title }} | {{item.title_pt}}</a></il>
     			{% endfor %}
     			</ul>
 			</div>
+		</div>
 			<div class="other-authors-index-grid">
 			{% assign current-author = page.name %}
 			{% for author in site.authors %}
