--- a/_layouts/layout-tags.html
+++ b/_layouts/layout-tags.html
@@ -12,8 +12,9 @@ layout: default
 	{% for page in site[collection.label] %}
 		{% if page.tags contains filtered-tag %}
 			<div>
-			<small><a href="{{page.url | relative_url}}">{{ page.excerpt }}</a></small>
+			<small>{{ page.content | truncatewords: 12 }}</small>
 			</div>
+			<div><a href="{{page.url | relative_url}}">ver</a></div>
 		{% endif %}
 	{% endfor %}
 {% endfor %}
