--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -194,6 +194,56 @@
 
 /*TEXT PAGES*/
 	/*hover text - chinese-portuguese*/
+
+
+
+.dropbtn {
+  color: black;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: max-content;
+  max-width: 20vw;
+  background-color: black;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #ffaaff;}
+
+.hovertext-pinyin{
+	color: #ff88ff;
+	font-size: 1.4vw;
+}
+
+.hovertext-pt{
+	color: white;
+	font-size: 1.2vw;
+}
+
+.hovertext-link{
+	color: #22ccff;
+	font-size: 0.9vw;
+}
+
+a.texto{
+	color: black;
+}
+
+
 		.hovertext {
 		  position: relative;
 		}
@@ -214,6 +264,14 @@
 		  z-index: 1;
 		  left: 0;
 		  top: 100%;
+		}
+
+		.pinyin{
+			visibility: visible;
+		}
+
+		.hanzi:hover{
+			display: block;
 		}
 
 		.hovertext-pt:before {
@@ -245,17 +303,14 @@
 			background-color: gray;
 		}
 
-		span:hover{
-			background-color: rgb(0,200,200);
-		}
 
 	/*grid*/
 
-		.grid-container {
+		.grid-container-textos {
 			display: grid;
 			  grid-template-columns: 3fr 4fr 1fr;
-			  padding-left: 10%;
-			  padding-right: 10%;
+			  padding-left: 0%;
+			  padding-right: 0%;
 			  padding-top: 0%;
 			  padding-bottom: 0%;
 
@@ -264,8 +319,8 @@
 		.container{
 			position:relative;
 			text-align: center;
-			padding-left: 5%;
-			padding-right: 5%;
+			padding-left: 0%;
+			padding-right: 0%;
 			padding-top: 10%;
 			padding-bottom: 10%;
 		}
@@ -279,7 +334,7 @@
 		.chinese {
 			font-size: 1.7vw;
 			padding-right: 1%;
-			padding-left: 1%;
+			padding-left: 0%;
 			
 		}
 		.portuguese {
@@ -558,7 +613,16 @@
 			padding-right: 0%;
 			padding-left: 0%;
 			padding-bottom: 5%;
-			
+		}
+
+		.grid-container-textos {
+			display: grid;
+			  grid-template-columns: 1fr;
+			  padding-left: 10%;
+			  padding-right: 10%;
+			  padding-top: 0%;
+			  padding-bottom: 0%;
+
 		}
 
 /*SITE FOOTER MOBILE*/
