--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -535,7 +535,8 @@ a.texto{
 
 /*MOBILE*/
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px),
+			screen and (max-height: 1000px){
 
 /* GENERAL MOBILE */
 	img.sitetitle{
@@ -626,7 +627,7 @@ a.texto{
 		}
 
 		.notas {
-		font-size: 1.4vw;
+		font-size: 9px;
 		background-color: #f4f1ef;
 		text-align: right;
 		padding-right: 10px;
@@ -646,6 +647,7 @@ a.texto{
 
 		.dropbtn {
 		  color: black;
+		  width: 100%;
 		  border: none;
 		}
 
@@ -656,18 +658,20 @@ a.texto{
 
 		.dropdown-content {
 		  display: none;
-		  position: absolute;
-		  width: max-content;
-		  max-width: 20vw;
+		  position: fixed;
+		  left: 0;
+		  bottom: 10;
+		  width: 80%;
+		  max-width: 80%;
 		  background-color: black;
-		  border-radius: 5px;
-		  padding-left: 10px;
-		  padding-right: 10px;
-		  padding-bottom: 10px;
+		  border-radius: 10px;
+		  padding-left: 10%;
+		  padding-right: 10%;
+		  padding-bottom: 10%;
 		  z-index: 1;
 		}
 
-		.dropdown:hover .dropdown-content {display: block;}
+		.dropdown:hover .dropdown-content { display: block;	}
 
 		.dropdown:hover .dropbtn {background-color: #ffaaff;}
 
@@ -678,12 +682,12 @@ a.texto{
 
 		.hovertext-pt{
 			color: white;
-			font-size: 12px;
+			font-size: 10px;
 		}
 
 		.hovertext-link{
 			color: #22ccff;
-			font-size: 11px;
+			font-size: 8px;
 		}
 
 		a.texto{
@@ -702,7 +706,7 @@ a.texto{
 		  width: 140px;
 		  background-color: #313A46;
 		  color: #ffffff;
-		  border-radius: 5px;
+		  border-radius: 10px;
 		  padding: 5px 0;
 		  transition: opacity .1s ease-in-out;
 		  
