--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -535,7 +535,8 @@ a.texto{
 
 /*MOBILE*/
 
-@media only screen and (max-resolution: 800dpi){
+@media only screen 
+	and (min-width: 320px) and (max-width: 1100px){
 
 /* GENERAL MOBILE */
 	img.sitetitle{
@@ -545,11 +546,11 @@ a.texto{
 
 	h1
 	{
-		font-size: 4vw;
+		font-size: 18px;
 	}
 
 	ul {
-		font-size: 3.5vw;
+		font-size: 16px;
 	}
 
 	.sitecontent {
