Initial GitHub pages site with Jekyll

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -546,11 +546,11 @@ a.texto{
 
 	h1
 	{
-		font-size: 18px;
+		font-size: 5.9vmin;
 	}
 
 	ul {
-		font-size: 16px;
+		font-size: 2vmin;
 	}
 
 	.sitecontent {
@@ -613,21 +613,21 @@ a.texto{
 /*TEXTOS MOBILE*/
 
 	.chinese {
-			font-size: 16px;
+			font-size: 3vmin;
 			padding-right: 0%;
 			padding-left: 0%;
 			padding-bottom: 5%;
 			
 		}
 		.portuguese {
-			font-size: 12px;
+			font-size: 2vmin;
 			padding-right: 0%;
 			padding-left: 0%;
 			padding-bottom: 5%;
 		}
 
 		.notas {
-		font-size: 9px;
+		font-size: 1.5vmin;
 		background-color: #f4f1ef;
 		text-align: right;
 		padding-right: 10px;
